--- a/assets/haylee-go.css
+++ b/assets/haylee-go.css
@@ -3,3 +3,10 @@ body {
     box-sizing: border-box;
     -webkit-font-smoothing: antialiased;
 }
+
+.container {
+  margin-right: auto;
+  margin-left: auto;
+  padding-left: 15px;
+  padding-right: 15px;
+}
