Hide pass and resign buttons when they are not necessary

--- a/templates/index.html
+++ b/templates/index.html
@@ -32,12 +32,13 @@
 
   <div id="turn" style="display: block"><h4>BLACK to play: Play or Pass!</h4></div>
 
-  <button type="button" onclick="passXHR()" style="background-color:MediumSeaGreen;color:white;font-size:150%">Pass</button>
+<div class="field">
+  <button id="pass" type="button" onclick="passXHR()" style="background-color:MediumSeaGreen;color:white;font-size:150%;display: block">Pass</button>
 
-  <button type="button" onclick="resignXHR()" style="background-color:Orange;color:white;font-size:150%">Resign</button>
+  <button id="resign" type="button" onclick="resignXHR()" style="background-color:Orange;color:white;font-size:150%;display: block">Resign</button>
 
   <button type="button" onclick="newGameXHR()" style="background-color:SlateBlue;color:white;font-size:150%">New Game</button>
-
+</div>
 </div>
 </body>
 </html>
