Button style fixes

--- a/templates/index.html
+++ b/templates/index.html
@@ -32,13 +32,12 @@
 
   <div id="turn" style="display: block"><h4>BLACK to play: Play or Pass!</h4></div>
 
-<div class="field">
-  <button id="pass" type="button" onclick="passXHR()" style="background-color:MediumSeaGreen;color:white;font-size:150%;display: block">Pass</button>
+  <button id="pass" type="button" onclick="passXHR()" style="background-color:MediumSeaGreen;color:white;font-size:150%;display: inline-block">Pass</button>
 
-  <button id="resign" type="button" onclick="resignXHR()" style="background-color:Orange;color:white;font-size:150%;display: block">Resign</button>
+  <button id="resign" type="button" onclick="resignXHR()" style="background-color:Orange;color:white;font-size:150%;display: inline-block">Resign</button>
 
   <button type="button" onclick="newGameXHR()" style="background-color:SlateBlue;color:white;font-size:150%">New Game</button>
-</div>
+
 </div>
 </body>
 </html>
