change button colors

--- a/templates/index.html
+++ b/templates/index.html
@@ -28,15 +28,15 @@
 
   <div id="remove" style="display: none;">Select dead stones:
   <input id="remove_this" type="text" name="dead">
-  <input type="submit" onclick="removeXHR(document.getElementById('remove_this').value)" style="background-color:Tomato;color:white;font-size:100%"></div>
+  <input type="submit" onclick="removeXHR(document.getElementById('remove_this').value)" style="background-color:#557A95;color:white;font-size:100%"></div>
 
   <div id="turn" style="display: block"><h4>BLACK to play: Play or Pass!</h4></div>
 
-  <button id="pass" type="button" onclick="passXHR()" style="background-color:MediumSeaGreen;color:white;font-size:150%;display: inline-block">Pass</button>
+  <button id="pass" type="button" onclick="passXHR()" style="background-color:#5D5C61;color:white;font-size:120%;display: inline-block">Pass</button>
 
-  <button id="resign" type="button" onclick="resignXHR()" style="background-color:Orange;color:white;font-size:150%;display: inline-block">Resign</button>
+  <button id="resign" type="button" onclick="resignXHR()" style="background-color:#ADADAD;color:white;font-size:120%;display: inline-block">Resign</button>
 
-  <button type="button" onclick="newGameXHR()" style="background-color:SlateBlue;color:white;font-size:150%">New Game</button>
+  <button type="button" onclick="newGameXHR()" style="background-color:#B1A296;color:white;font-size:120%">New Game</button>
 
 </div>
 </body>
