--- a/templates/index.html
+++ b/templates/index.html
@@ -38,6 +38,38 @@
 
   <button type="button" onclick="newGameXHR()" style="background-color:#B1A296;color:white;font-size:120%">New Game</button>
 
+  <div style="display: block"><br>Upload SGF:
+  <input id="sgf_upload_file" type="file" name="sgf" accept=".sgf" onchange="sgf_upload_go(this);" style="display: none;">
+  <button id="sgf_upload_button" onclick="sgf_upload_start(event);" style="background-color:#7395AE;color:white;font-size:100%">Choose File</div>
+
+  <script>
+  // supporting code for SGF uploads
+  function sgf_upload_start(event) {
+      event.stopPropagation();
+      event.preventDefault();
+      var input_file = document.getElementById('sgf_upload_file');
+      input_file.click();
+  };
+  function sgf_upload_go(input_file) {
+      if(input_file.files.length < 1) { return; }
+
+      var file = input_file.files[0];
+      if(file.size > 1024*1024) {
+ 	        window.alert("File is too large (max 1MB).");
+ 	        return;
+      }
+      var reader = new FileReader();
+
+      // clear the files list so that user can re-upload a file by the same name,
+      // and onchange will still fire.
+      input_file.value = '';
+
+      reader.onload = function(evt) {
+         uploadSGFXHR(evt.target.result);
+      };
+      reader.readAsText(file);
+  }
+  </script>
 </div>
 </body>
 </html>
