--- a/templates/index.html
+++ b/templates/index.html
@@ -31,7 +31,7 @@
 
     <div id="illegal_move_message" style="display: none;">Illegal move. Try again?</div>
 
-    <div id="turn" style="display: none;">BLACK to play: Play or Pass!</div>
+    <div id="turn" style="display: none;">BLACK to play</div>
 
     <div id="result" style="display: none;">Result</div>
 
