--- a/assets/haylee-go.css
+++ b/assets/haylee-go.css
@@ -16,7 +16,7 @@ a {
 }
 
 #main {
-  background-color: #81D8D0;
+  background-color: #81D8D3;
   overflow: hidden;
   height: 100%;
 }
@@ -33,6 +33,13 @@ a {
   font-size: 20px;
   width: 15vw;
   padding: 15px;
+}
+
+#remove_submit {
+  background-color: #669999;
+  color: white;
+  font-size: 15px;
+  padding: 8px;
 }
 
 #pass, #undo, #resign, #sgf_down, #sgf_up, #remove_this {
@@ -70,7 +77,7 @@ a {
   padding-bottom: 0.5em;
   text-shadow: 1px 1px #669999;
   font-weight: bold;
-  color: #81D8D0;
+  color: #81D8D3;
   text-align: left;
   overflow: hidden;
 }
